fixing my test class